<resources>
    <string name="app_name">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reg">Registration</string>
    <string name="menu_attend">Attendance</string>
    <string name="menu_result">Results</string>
    <string name="menu_calender">Academic Calender</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Signup</string>
    <string name="prompt_username">Username</string>
    <string name="forgot">Forgot Password</string>
    <string name="fingerprint">Login with Fingerprint</string>

</resources>
