<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:result="http://schemas.android.com/result"
    result:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reg"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reg" />
        <item
            android:id="@+id/nav_attend"
            android:icon="@drawable/attendance"
            android:title="@string/menu_attend" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/results"
            android:title="@string/menu_result" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/calender"
            android:title="@string/menu_calender" />
    </group>


</menu>
